option bg-color > black

--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,5 @@ input[type=radio]:checked{
 
 .form-select option{
     color: white;
-    background-color: white;
+    background-color: black;
 }
