--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 input[type=radio]:checked{
     background-color: black;
     box-shadow: 0 0 0 .2vw #747474;
+    border: none;
 }
 
 .form-select option{
